# scoped_alloca

./: .gitignore  Cargo.toml  README.md  build.rs
src/: alloca.c  lib.rs
